[package]
name = "server"
version = "0.1.0"
authors = ["davidpodhola <david.podhola@hsharp.software>"]

[dependencies]
nickel = "*"
bson = "*"
mongodb  = "*"
clippy = {version = "*", optional = true}
iis = "*"
nickel-jwt-session = { version = "*",path = "../lib/nickel-jwt-session" }
serde = "1.0.2"
serde_json = "1.0"
serde_derive = "1.0.2"

[features]
default = []

[dependencies.hyper]
version = "*"
default-features = false

[dependencies.cookie]
version = "*"
default-features = false
