[package]
name = "server"
version = "0.1.0"
authors = ["davidpodhola <david.podhola@hsharp.software>"]

[dependencies]
nickel = "*"
bson = "*"
mongodb  = "*"
clippy = {version = "*", optional = true}
iis = "*"
nickel-jwt-session = "0.6.0"
serde = "1.0.2"
serde_json = "1.0"
serde_derive = "1.0.2"
chrono = { version = "0.3", features = ["serde", "rustc-serialize"] }
rust-crypto = "*"

[features]
default = []

[dependencies.hyper]
version = "*"
default-features = false

[dependencies.cookie]
version = "*"
default-features = false
