[package]
name = "server"
version = "0.1.0"
authors = ["davidpodhola <david.podhola@hsharp.software>"]

[dependencies]
bson = "*"
clippy = {version = "*", optional = true}
iis = "*"
serde = "1.0.2"
serde_json = "1.0"
serde_derive = "1.0.2"
chrono = { version = "0.3", features = ["serde", "rustc-serialize"] }
rust-crypto = "*"
tiberius = { version = "*",path = "../lib/tiberius" }
futures = "*"
tokio-core = "*"
toml = "0.4"
lazy_static = "0.2"

[features]
default = []

[dependencies.hyper]
version = "*"
default-features = false

[dependencies.cookie]
version = "*"
default-features = false
